# hft-simulation

./: .gitignore  README.md  compose.yml  docker-compose.yml  pyproject.toml
.github/workflows/: exchange-connector.yml
docs/: Architecture.drawio
infra/grafana/: Dockerfile  init.sh
libs/common/: README.md  pyproject.toml
libs/common/src/common/: grafana_client.py  order_book.py  settings.py
libs/common/src/common/grafana/: grafana_client.py
libs/common/src/common/models/: order_book.py
libs/common/src/common/redis/: redis_client.py  redis_consumer.py  redis_producer.py
libs/common/tests/: order_book_test.py  settings_test.py
libs/common/tests/grafana/: grafana_client_test.py
libs/common/tests/redis/: redis_producer_test.py
libs/hft-config/: pyproject.toml
libs/hft-config/src/hft_config/: __init__.py  settings.py
libs/hft-messaging/: pyproject.toml
libs/hft-messaging/src/hft_messaging/: __init__.py
libs/hft-observability/: pyproject.toml
libs/hft-observability/src/hft_observability/: __init__.py
services/exchange-connector/: Dockerfile  entrypoint.sh  pyproject.toml
services/exchange-connector/schema/deribit/: book-10.json
services/exchange-connector/src/exchange_connector/: __init__.py  connector_message.py  main.py
services/exchange-connector/src/exchange_connector/connectors/: deribit_connector.py
services/exchange-connector/src/exchange_connector/models/: order_book.py
services/exchange-connector/tests/models/: order_book_test.py
services/execution-engine/: pyproject.toml
services/execution-engine/src/execution_engine/: __init__.py
services/execution-engine/tests/: test_main.py
services/market-connector/: Dockerfile  pyproject.toml
services/market-connector/src/market_connector/: __init__.py  config.py
services/market-connector/src/market_connector/adapters/: base.py
services/market-connector/src/market_connector/adapters/deribit/: adapter.py  channels.py  client.py  errors.py  mapper.py
services/market-connector/src/market_connector/api/: __init__.py  dependencies.py  schemas.py
services/market-connector/src/market_connector/api/routes/: __init__.py  health.py  streams.py  subscriptions.py
services/market-connector/src/market_connector/app/: __init__.py  main.py  serve.py
services/market-connector/src/market_connector/domain/: __init__.py  events.py  subscriptions.py
services/market-connector/src/market_connector/examples/: deribit_book.py  deribit_multi_book.py
services/market-connector/src/market_connector/sinks/: __init__.py  redis_stream.py
services/market-connector/src/market_connector/subscriptions/: __init__.py  manager.py
services/market-connector/tests/: test_api.py  test_config.py  test_deribit_adapter.py  test_deribit_channels.py  test_deribit_client.py  test_deribit_errors.py  test_deribit_mapper.py  test_main.py  test_redis_stream.py  test_serve.py  test_subscription_manager.py
services/monitoring-service/: pyproject.toml
services/monitoring-service/src/monitoring_service/: __init__.py
services/monitoring-service/tests/: test_main.py
services/processing-engine/: pyproject.toml
services/processing-engine/src/processing_engine/: __init__.py  main.py
services/processing-engine/tests/: test_main.py
