[project]
name = "hft-config"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "mlapid", email = "marcus.lapid@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
]

[build-system]
requires = ["uv_build>=0.8.19,<0.9.0"]
build-backend = "uv_build"
