[project]
name = "hft-messaging"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "mlapid", email = "marcus.lapid@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "redis>=8.0.1",
]

[build-system]
requires = ["uv_build>=0.8.19,<0.9.0"]
build-backend = "uv_build"
