[project]
name = "exchange-connector"
version = "0.1.0"
description = "Exchange connector"
readme = "README.md"
authors = [{ name = "mlapid", email = "marcus.lapid@gmail.com" }]
requires-python = ">=3.13"
dependencies = ["loguru>=0.7.3"]

[project.scripts]
exchange-connector = "exchange_connector:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/exchange_connector"]
