[project]
name = "exchange-connector"
version = "0.1.0"
description = "Exchange connector"
readme = "README.md"
authors = [{ name = "mlapid", email = "marcus.lapid@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
    "common",
    "loguru>=0.7.3",
    "pydantic>=2.11.7",
]

[tool.uv.sources]
common = { path = "../../libs/common", editable = true }

[project.scripts]
exchange-connector = "exchange_connector.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/exchange_connector"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",    
]
