[project]
name = "market-connector"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "mlapid", email = "marcus.lapid@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.139.2",
    "hft-messaging>=0.1.0",
    "hft-observability>=0.1.0",
    "httpx>=0.28.1",
    "uvicorn>=0.51.0",
    "websockets>=16.1.1",
]

[tool.uv.sources]
hft-messaging = { workspace = true }
hft-observability = { workspace = true }

[project.scripts]
market-connector = "market_connector:main"
market-connector-api = "market_connector.app.serve:main"
deribit-book = "market_connector.examples.deribit_book:main"
deribit-multi-book = "market_connector.examples.deribit_multi_book:main"

[build-system]
requires = ["uv_build>=0.8.19,<0.9.0"]
build-backend = "uv_build"
