[project]
name = "processing-engine"
version = "0.1.0"
description = "Processing engine"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "common",
    "loguru>=0.7.3",
]

[tool.uv.sources]
common = { path = "../../libs/common", editable = true }

[project.scripts]
processing-engine = "processing_engine.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/processing_engine"]
